# amarillo

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile_gunicorn  Dockerfile_uvicorn  Jenkinsfile  MANIFEST.in  Makefile  README.md  add_to_gitea_from_github.md  config  continuous-pull.ipy  docker_start.sh  enhancer.py  logging.conf  main.py  make_sample_data.sh  mitanand.Dockerfile  prestart.sh  prod.env  pyproject.toml  pytest.ini  quantum-stack.yml  requirements.dev.txt  requirements.txt  standard.Dockerfile
.github/workflows/: docker-build-deploy.yml  docker-image.yml
amarillo/: configuration.py  main.py
amarillo/models/: AgencyConf.py  Carpool.py  User.py  gtfs.py
amarillo/routers/: agency.py  agencyconf.py  carpool.py  region.py  users.py
amarillo/services/: agencies.py  agencyconf.py  carpools.py  config.py  gtfs.py  gtfs_constants.py  gtfs_export.py  gtfs_generator.py  hooks.py  mocks.py  oauth2.py  regions.py  routing.py  secrets.py  stops.py  sync.py  trips.py  users.py
amarillo/services/importing/: __init__.py  (+9 more)
amarillo/static/: logging.conf
amarillo/stores/: filebasedstore.py
amarillo/tests/: no_test_carpool.py  sampledata.py  test_agencyconf.py  test_gtfs.py  test_noi_sync.py  test_permissions.py  test_stops_gtfs_importer.py  test_stops_overpass_importer.py  test_stops_store.py  test_trip_store.py  test_trip_transformer.py
amarillo/utils/: get.py  utils.py
amarillo/views/: home.py
app/: configuration.py  main.py  prod.env
app/models/: AgencyConf.py  Carpool.py  gtfs.py  token.py
app/proto/: realtime_extension.proto
app/routers/: agency.py  agencyconf.py  carpool.py  gtfs_rt.py  metrics.py  region.py  token.py
app/services/: agencies.py  agencyconf.py  carpools.py  config.py  gtfs.py  gtfs_constants.py  gtfs_export.py  gtfs_generator.py  mocks.py  regions.py  routing.py  secrets.py  stops.py  trips.py
app/tests/: amarillo_prometheus_test.ipynb  sampledata.py  stops.csv  stops.json  test_amarillo_metrics.py  test_carpool.py  test_gtfs.py  test_gtfsrt.py  test_stops_store.py  test_trip_store.py
app/utils/: container.py  utils.py
conf/: stop_sources.json
conf/agency/: mifaz.json  ummadum.json
conf/region/: bw.json  by.json  nrw.json
data/agencyconf/: mfdz.json
models/: Carpool.py  StopTime.py  Weekday.py
routers/: carpool.py  gtfs_rt.py
services/: gtfs.py  mocks.py
services/gtfsrt/: realtime_extension_pb2.py
templates/home/: index.html
templates/shared/: layout.html
tests/: sampledata.py  test_carpool.py  testdata.py
(+16 files in other folders)
